--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@astrojs/rss": "^3.0.0",
     "@astrojs/svelte": "^4.0.3",
     "@astrojs/vercel": "^5.0.2",
+    "@fontsource-variable/manrope": "^5.0.16",
+    "@fontsource-variable/public-sans": "^5.0.15",
+    "@fontsource-variable/roboto-flex": "^5.0.8",
     "@picocss/pico": "^1.5.10",
     "astro": "^3.3.2",
     "dayjs": "^1.11.10",
