--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro": "^3.3.2",
     "dayjs": "^1.11.10",
     "mdast-util-to-string": "^4.0.0",
+    "motion": "^10.16.4",
     "reading-time": "^1.5.0",
     "svelte": "^4.0.0"
   }
