--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^1.1.2",
     "@astrojs/rss": "^3.0.0",
+    "@astrojs/sitemap": "^3.0.2",
     "@astrojs/svelte": "^4.0.3",
     "@astrojs/vercel": "^5.0.2",
-    "@fontsource-variable/manrope": "^5.0.16",
-    "@fontsource-variable/public-sans": "^5.0.15",
-    "@fontsource-variable/roboto-flex": "^5.0.8",
     "@picocss/pico": "^1.5.10",
-    "astro": "^3.3.2",
+    "astro": "^3.3.3",
     "dayjs": "^1.11.10",
     "mdast-util-to-string": "^4.0.0",
     "motion": "^10.16.4",
