--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mdast-util-to-string": "^4.0.0",
     "motion": "^10.16.4",
     "reading-time": "^1.5.0",
+    "sharp": "^0.32.6",
     "svelte": "^4.0.0"
   }
 }
