--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "fallenblogs",
+  "name": "blogs",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^1.1.2",
+    "@astrojs/check": "^0.3.1",
+    "@astrojs/mdx": "^1.1.4",
     "@astrojs/rss": "^3.0.0",
-    "@astrojs/sitemap": "^3.0.2",
-    "@astrojs/svelte": "^4.0.3",
-    "@astrojs/vercel": "^5.0.2",
-    "astro": "^3.3.3",
+    "astro": "^3.5.3",
+    "colorthief": "^2.4.0",
+    "colvertize": "^0.1.0",
     "dayjs": "^1.11.10",
     "mdast-util-to-string": "^4.0.0",
-    "motion": "^10.16.4",
     "reading-time": "^1.5.0",
     "sharp": "^0.32.6",
-    "svelte": "^4.0.0"
+    "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.9.0"
   }
 }
