--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^1.1.4",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/svelte": "^4.0.4",
+    "@astrojs/vercel": "^5.2.0",
     "astro": "^3.5.3",
     "color-convert": "^2.0.1",
     "colorthief": "^2.4.0",
