--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@astrojs/check": "^0.3.1",
     "@astrojs/mdx": "^1.1.4",
     "@astrojs/rss": "^3.0.0",
-    "@astrojs/svelte": "^4.0.4",
-    "@astrojs/vercel": "^5.2.0",
+    "@astrojs/vercel": "0.0.0-monorepos-20221010034923",
     "astro": "^3.5.3",
     "color-convert": "^2.0.1",
     "colorthief": "^2.4.0",
@@ -22,7 +21,6 @@
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
     "sharp": "^0.32.6",
-    "svelte": "^5.0.0-next.1",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
