--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.3.1",
     "@astrojs/mdx": "^1.1.5",
     "@astrojs/rss": "^3.0.0",
+    "@astrojs/vercel": "^5.2.0",
     "astro": "^3.6.0",
     "dayjs": "^1.11.10",
     "mdast-util-to-string": "^4.0.0",
