--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "astro": "^3.6.0",
     "dayjs": "^1.11.10",
     "mdast-util-to-string": "^4.0.0",
+    "node-vibrant": "3.1.6",
     "reading-time": "^1.5.0",
     "sharp": "^0.32.6",
     "typescript": "^5.3.2"
